--- a/src/main/resources/templates/productDetails.html
+++ b/src/main/resources/templates/productDetails.html
@@ -85,7 +85,7 @@
         </div>
         <input id="count-input" type="number" value="1" style="width: 61px">
         <button class="cart-btn btn btn-default" id="to-cart-btn" onclick="toCart()">장바구니 담기</button>
-        <button class="buy-btn btn btn-primary" id="to-buy-btn">구매하기</button>
+        <button class="buy-btn btn btn-primary" id="to-buy-btn" onclick="order()">구매하기</button>
       </div>
     </div>
     <h2>같은 판매자 다른 상품</h2>
