--- a/src/main/resources/templates/mycoupang/userModify.html
+++ b/src/main/resources/templates/mycoupang/userModify.html
@@ -16,7 +16,7 @@
       </tr>
       <tr>
         <th scope="row">비밀번호</th>
-        <td><input id="confirmPassword" type="password"></td>
+        <td><input id="confirmPassword" type="password" autocomplete="new-password"></td>
       </tr>
       </tbody>
     </table>
