--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -24,7 +24,7 @@
         <div class="nav-menu-top">
           <img class="nav-logo" src="/image/logo.png" onclick="location.href='/'">
           <div class="search-container nav-box">
-            <input class="nav-box" type="text" id="nav-search" placeholder="찾고 싶은 상품을 검색해보세요!" onkeydown="if (event.keyCode==13){search();}">
+            <input autocomplete="off" class="nav-box" type="text" id="nav-search" placeholder="찾고 싶은 상품을 검색해보세요!" onkeydown="if (event.keyCode==13){search();}">
             <i class="fas fa-search" id="nav-search-icon" onclick="search()"></i>
           </div>
           <div class="nav-icon">
