장바구니에서 구매

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -61,7 +61,7 @@
         계속
         쇼핑하기
       </button>
-      <button class="btn btn-primary" onclick="location.href='/cart'">주문하기</button>
+      <button class="btn btn-primary" onclick="location.href='/order/cart'">주문하기</button>
     </div>
   </div>
 </div>
