--- a/src/main/resources/templates/order/orderDirect.html
+++ b/src/main/resources/templates/order/orderDirect.html
@@ -42,6 +42,7 @@
     </button>
   </div>
 </div>
+<div th:replace="footer.html :: fragment-footer()"></div>
 <script src="/js/order.js"></script>
 </body>
 </html>
