--- a/src/main/resources/templates/productDetails.html
+++ b/src/main/resources/templates/productDetails.html
@@ -107,6 +107,7 @@
     <img class="details-page-url" th:src="${product.detailsPageUrl}">
   </div>
 </div>
+<div th:replace="footer.html :: fragment-footer()"></div>
 <script src="/js/productDetails.js"></script>
 </body>
 </html>
