--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -65,6 +65,7 @@
     </div>
   </div>
 </div>
+<div th:replace="footer.html :: fragment-footer()"></div>
 <script src="/js/cart.js"></script>
 </body>
 </html>
