--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,9 +3,11 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="head.html :: fragment-head()"></head>
 <div th:replace="nav.html :: fragment-nav(${user})"></div>
+<body>
 <main id="main">
   <div th:replace="productGrid.html :: fragment-productGrid(${productPage})"></div>
 </main>
 <div th:replace="paginationBar.html :: fragment-paginationBar(${productPage})"></div>
+<div th:replace="footer.html :: fragment-footer()"></div>
 </body>
 </html>
