--- a/src/main/resources/templates/mycoupang/membership.html
+++ b/src/main/resources/templates/mycoupang/membership.html
@@ -31,6 +31,7 @@
     </div>
   </div>
 </div>
+<div th:replace="footer.html :: fragment-footer()"></div>
 <script src="/js/membership.js"></script>
 </body>
 </html>
