--- a/src/main/resources/templates/mycoupang/userModify.html
+++ b/src/main/resources/templates/mycoupang/userModify.html
@@ -44,6 +44,7 @@
     </div>
   </div>
 </div>
+<div th:replace="footer.html :: fragment-footer()"></div>
 <script src="/js/userModify.js"></script>
 </body>
 </html>
