--- a/src/main/resources/templates/order/orderCart.html
+++ b/src/main/resources/templates/order/orderCart.html
@@ -40,6 +40,7 @@
     <button class="btn btn-primary" onclick="cartOrder()">결제하기</button>
   </div>
 </div>
+<div th:replace="footer.html :: fragment-footer()"></div>
 <script src="/js/order.js"></script>
 </body>
 </html>
