--- a/src/main/resources/templates/productList.html
+++ b/src/main/resources/templates/productList.html
@@ -18,5 +18,6 @@
   </div>
 </main>
 <div th:replace="paginationBar.html :: fragment-paginationBar(${productPage})"></div>
+<div th:replace="footer.html :: fragment-footer()"></div>
 </body>
 </html>
