--- a/src/main/resources/templates/searchProduct.html
+++ b/src/main/resources/templates/searchProduct.html
@@ -56,5 +56,6 @@
     window.open(location.pathname + '?' + params, '_self')
   }
 </script>
+<div th:replace="footer.html :: fragment-footer()"></div>
 </body>
 </html>
