--- a/src/main/resources/templates/order/receiverInfo.html
+++ b/src/main/resources/templates/order/receiverInfo.html
@@ -19,7 +19,7 @@
     </tr>
     <tr>
       <th>연락처</th>
-      <td th:value="${address.telephone}"></td>
+      <td th:text="${address.telephone}"></td>
     </tr>
     <tr>
       <th>배송 요청사항</th>
